--- a/Stp/Base/BUILD.gn
+++ b/Stp/Base/BUILD.gn
@@ -51,68 +51,66 @@ component("Base") {
     "Compiler/Stringize.h",
     "Compiler/Tsan.h",
 
-    "Containers/Array.h",
+#    "Containers/Array.h",
     "Containers/ArrayOps.h",
-    "Containers/BinarySearch.h",
-    "Containers/BitArray.cpp",
-    "Containers/BitArray.h",
-    "Containers/Buffer.h",
-    "Containers/BufferSpan.cpp",
-    "Containers/BufferSpan.h",
-    "Containers/FlatMap.h",
-    "Containers/FlatSet.h",
-    "Containers/HashMap.cpp",
-    "Containers/HashMap.h",
-    "Containers/HashSet.h",
-    "Containers/InlineList.h",
-    "Containers/Join.h",
-    "Containers/KeyValuePair.h",
-    "Containers/LinkedList.h",
-    "Containers/List.cpp",
-    "Containers/List.h",
-    "Containers/LruCache.h",
-    "Containers/SinglyLinkedList.h",
-    "Containers/Sorting.h",
-    "Containers/SortingBasic.h",
-    "Containers/Span.h",
-    "Containers/SpanAlgo.h",
-    "Containers/SpanCompare.h",
-    "Containers/Stack.h",
-
-    "Crypto/Crc32.cpp",
-    "Crypto/Crc32.h",
-    "Crypto/CryptoRandom.h",
-    "Crypto/CryptoRandomPosix.cpp",
-    "Crypto/CryptoRandomWin.cpp",
-    "Crypto/Md5.cpp",
-    "Crypto/Md5.h",
-    "Crypto/Sha1.cpp",
-    "Crypto/Sha1.h",
-
+#    "Containers/BinarySearch.h",
+#    "Containers/BitArray.cpp",
+#    "Containers/BitArray.h",
+#    "Containers/Buffer.h",
+#    "Containers/BufferSpan.cpp",
+#    "Containers/BufferSpan.h",
+#    "Containers/FlatMap.h",
+#    "Containers/FlatSet.h",
+#    "Containers/HashMap.cpp",
+#    "Containers/HashMap.h",
+#    "Containers/HashSet.h",
+#    "Containers/Join.h",
+#    "Containers/KeyValuePair.h",
+#    "Containers/LinkedList.h",
+#    "Containers/List.h",
+#    "Containers/LruCache.h",
+#    "Containers/SinglyLinkedList.h",
+#    "Containers/Sorting.h",
+#    "Containers/SortingBasic.h",
+#    "Containers/Span.h",
+#    "Containers/SpanAlgo.h",
+#    "Containers/SpanCompare.h",
+#    "Containers/Stack.h",
+#
+#    "Crypto/Crc32.cpp",
+#    "Crypto/Crc32.h",
+#    "Crypto/CryptoRandom.h",
+#    "Crypto/CryptoRandomPosix.cpp",
+#    "Crypto/CryptoRandomWin.cpp",
+#    "Crypto/Md5.cpp",
+#    "Crypto/Md5.h",
+#    "Crypto/Sha1.cpp",
+#    "Crypto/Sha1.h",
+#
     "Debug/Alias.cpp",
     "Debug/Alias.h",
     "Debug/Assert.cpp",
     "Debug/Assert.h",
-    "Debug/Console.cpp",
-    "Debug/Console.h",
-    "Debug/ConsoleAndroid.cpp",
-    "Debug/ConsolePosix.cpp",
-    "Debug/ConsoleWin.cpp",
+#    "Debug/Console.cpp",
+#    "Debug/Console.h",
+#    "Debug/ConsoleAndroid.cpp",
+#    "Debug/ConsolePosix.cpp",
+#    "Debug/ConsoleWin.cpp",
     "Debug/Debugger.cpp",
     "Debug/Debugger.h",
     "Debug/DebuggerPosix.cpp",
     "Debug/DebuggerWin.cpp",
-    "Debug/Location.cpp",
-    "Debug/Location.h",
-    "Debug/Log.cpp",
-    "Debug/Log.h",
+#    "Debug/Location.cpp",
+#    "Debug/Location.h",
+#    "Debug/Log.cpp",
+#    "Debug/Log.h",
 #    "Debug/StackTrace.cpp",
-    "Debug/StackTrace.h",
-    "Debug/StackTraceAndroid.cpp",
-    "Debug/StackTraceDarwin.cpp",
-    "Debug/StackTraceLinux.cpp",
+#    "Debug/StackTrace.h",
+#    "Debug/StackTraceAndroid.cpp",
+#    "Debug/StackTraceDarwin.cpp",
+#    "Debug/StackTraceLinux.cpp",
 #    "Debug/StackTracePosix.cpp",
-    "Debug/StackTraceWin.cpp",
+#    "Debug/StackTraceWin.cpp",
 
     "Dtoa/Bignum.cpp",
     "Dtoa/Bignum.h",
@@ -135,169 +133,166 @@ component("Base") {
     "Dtoa/Strtod.h",
     "Dtoa/Utils.h",
 
-    "Error/BasicExceptions.cpp",
-    "Error/BasicExceptions.h",
-    "Error/ErrorCode.cpp",
-    "Error/ErrorCode.h",
-    "Error/Exception.cpp",
-    "Error/Exception.h",
-    "Error/ExceptionPtr.h",
-    "Error/SystemErrorCode.h",
-    "Error/SystemException.cpp",
-    "Error/SystemException.h",
+    "Error/BasicExceptions.cpp", 
+    "Error/BasicExceptions.h", 
+    "Error/ErrorCode.cpp", 
+    "Error/ErrorCode.h", 
+    "Error/Exception.cpp", 
+    "Error/Exception.h", 
+    "Error/ExceptionPtr.h", 
+    "Error/SystemErrorCode.h", 
+    "Error/SystemException.cpp", 
+    "Error/SystemException.h", 
 
-    "FileSystem/Directory.cpp",
-    "FileSystem/Directory.h",
-    "FileSystem/DirectoryEnumerator.cpp",
-    "FileSystem/DirectoryEnumerator.h",
-    "FileSystem/DirectoryEnumeratorPosix.cpp",
-    "FileSystem/DirectoryEnumeratorWin.cpp",
-    "FileSystem/DirectoryPosix.cpp",
-    "FileSystem/DirectoryWin.cpp",
-    "FileSystem/File.cpp",
-    "FileSystem/File.h",
-    "FileSystem/FileInfo.h",
-    "FileSystem/FilePath.cpp",
-    "FileSystem/FilePath.h",
-    "FileSystem/FilePathCompare.cpp",
-    "FileSystem/FilePathSpan.cpp",
-    "FileSystem/FilePathSpan.h",
-    "FileSystem/FilePathWriter.cpp",
-    "FileSystem/FilePathWriter.h",
-    "FileSystem/FilePosix.cpp",
-    "FileSystem/FileSystemException.cpp",
-    "FileSystem/FileSystemException.h",
-    "FileSystem/FileWin.cpp",
-    "FileSystem/KnownPaths.cpp",
-    "FileSystem/KnownPaths.h",
-    "FileSystem/KnownPathsAndroid.cpp",
-    "FileSystem/KnownPathsDarwin.mm",
-    "FileSystem/KnownPathsLinux.cpp",
-    "FileSystem/KnownPathsPosix.cpp",
-    "FileSystem/KnownPathsWin.cpp",
-    "FileSystem/KnownPathUtil.cpp",
-    "FileSystem/KnownPathUtil.h",
+#    "FileSystem/Directory.cpp",
+#    "FileSystem/Directory.h",
+#    "FileSystem/DirectoryEnumerator.cpp",
+#    "FileSystem/DirectoryEnumerator.h",
+#    "FileSystem/DirectoryEnumeratorPosix.cpp",
+#    "FileSystem/DirectoryEnumeratorWin.cpp",
+#    "FileSystem/DirectoryPosix.cpp",
+#    "FileSystem/DirectoryWin.cpp",
+#    "FileSystem/File.cpp",
+#    "FileSystem/File.h",
+#    "FileSystem/FileInfo.h",
+#    "FileSystem/FilePath.cpp",
+#    "FileSystem/FilePath.h",
+#    "FileSystem/FilePathCompare.cpp",
+#    "FileSystem/FilePathSpan.cpp",
+#    "FileSystem/FilePathSpan.h",
+#    "FileSystem/FilePathWriter.cpp",
+#    "FileSystem/FilePathWriter.h",
+#    "FileSystem/FilePosix.cpp",
+#    "FileSystem/FileWin.cpp",
+#    "FileSystem/KnownPaths.cpp",
+#    "FileSystem/KnownPaths.h",
+#    "FileSystem/KnownPathsAndroid.cpp",
+#    "FileSystem/KnownPathsDarwin.mm",
+#    "FileSystem/KnownPathsLinux.cpp",
+#    "FileSystem/KnownPathsPosix.cpp",
+#    "FileSystem/KnownPathsWin.cpp",
+#    "FileSystem/KnownPathUtil.cpp",
+#    "FileSystem/KnownPathUtil.h",
 #    "FileSystem/MemoryMappedFile.cpp",
 #    "FileSystem/MemoryMappedFile.h",
 #    "FileSystem/MemoryMappedFilePosix.cpp",
 #    "FileSystem/MemoryMappedFileWin.cpp",
-    "FileSystem/RecursiveDirectoryEnumerator.cpp",
-    "FileSystem/RecursiveDirectoryEnumerator.h",
+#    "FileSystem/RecursiveDirectoryEnumerator.cpp",
+#    "FileSystem/RecursiveDirectoryEnumerator.h",
 #    "FileSystem/TemporaryDirectory.cpp",
 #    "FileSystem/TemporaryDirectory.h",
-
-    "Io/Base64.cpp",
-    "Io/Base64.h",
-    "Io/BufferedStream.cpp",
-    "Io/BufferedStream.h",
-    "Io/ClipTextWriter.cpp",
-    "Io/ClipTextWriter.h",
-    "Io/FileStream.cpp",
-    "Io/FileStream.h",
-    "Io/FileStreamInfo.h",
-    "Io/FileStreamPosix.cpp",
-    "Io/FileStreamWin.cpp",
-    "Io/InlineStringWriter.cpp",
-    "Io/InlineStringWriter.h",
-    "Io/IoException.cpp",
-    "Io/IoException.h",
-    "Io/MemoryStream.cpp",
-    "Io/MemoryStream.h",
-    "Io/Stream.cpp",
-    "Io/Stream.h",
-    "Io/StreamWriter.cpp",
-    "Io/StreamWriter.h",
+#
+#    "Io/Base64.cpp",
+#    "Io/Base64.h",
+#    "Io/BufferedStream.cpp",
+#    "Io/BufferedStream.h",
+#    "Io/ClipTextWriter.cpp",
+#    "Io/ClipTextWriter.h",
+#    "Io/FileStream.cpp",
+#    "Io/FileStream.h",
+#    "Io/FileStreamInfo.h",
+#    "Io/FileStreamPosix.cpp",
+#    "Io/FileStreamWin.cpp",
+#    "Io/MemoryStream.cpp",
+#    "Io/MemoryStream.h",
+#    "Io/Stream.cpp",
+#    "Io/Stream.h",
+#    "Io/StreamWriter.cpp",
+#    "Io/StreamWriter.h",
 #    "Io/StringReader.cpp",
 #    "Io/StringReader.h",
-    "Io/StringWriter.cpp",
-    "Io/StringWriter.h",
+#    "Io/StringWriter.cpp",
+#    "Io/StringWriter.h",
 #    "Io/TextReader.cpp",
 #    "Io/TextReader.h",
     "Io/TextWriter.cpp",
     "Io/TextWriter.h",
-
-    "Linux/ProcCommon.cpp",
-    "Linux/ProcCommon.h",
-    # FIXME "Linux/ProcMaps.cpp",
-    "Linux/ProcMaps.h",
-    "Linux/Xdg.cpp",
-    "Linux/Xdg.h",
-
-    "Math/Alignment.h",
-    "Math/Bcd.h",
+#
+#    "Linux/ProcCommon.cpp",
+#    "Linux/ProcCommon.h",
+#    # FIXME "Linux/ProcMaps.cpp",
+#    "Linux/ProcMaps.h",
+#    "Linux/Xdg.cpp",
+#    "Linux/Xdg.h",
+#
+#    "Math/Alignment.h",
+#    "Math/Bcd.h",
     "Math/Bits.cpp",
     "Math/Bits.h",
     "Math/BitsImpl.h",
-    "Math/CommonFactor.h",
-    "Math/Fixed.cpp",
-    "Math/Fixed.h",
-    "Math/FloatToInteger.h",
-    "Math/FlushToZero.h",
-    "Math/Half.cpp",
-    "Math/Half.h",
-    "Math/Math.h",
-    "Math/Multiple.h",
-    "Math/Near.cpp",
-    "Math/Near.h",
-    "Math/NBits.h",
-    "Math/OverflowMath.h",
-    "Math/PowerOfTwo.h",
-    "Math/Prime.cpp",
-    "Math/Prime.h",
-    "Math/RawFloat.h",
-    "Math/Safe.h",
-    "Math/SafeConversions.h",
-    "Math/SafeConversionsImpl.h",
-    "Math/SaturatedMath.h",
-
-    "Memory/addressOf.h",
-    "Memory/AlignedMalloc.cpp",
-    "Memory/AlignedMalloc.h",
+#    "Math/CommonFactor.h",
+#    "Math/Fixed.cpp",
+#    "Math/Fixed.h",
+#    "Math/FloatToInteger.h",
+#    "Math/FlushToZero.h",
+#    "Math/Half.cpp",
+#    "Math/Half.h",
+#    "Math/Math.h",
+#    "Math/Multiple.h",
+#    "Math/Near.cpp",
+#    "Math/Near.h",
+#    "Math/NBits.h",
+#    "Math/OverflowMath.h",
+#    "Math/PowerOfTwo.h",
+#    "Math/Prime.cpp",
+#    "Math/Prime.h",
+#    "Math/RawFloat.h",
+#    "Math/Safe.h",
+#    "Math/SafeConversions.h",
+#    "Math/SafeConversionsImpl.h",
+#    "Math/SaturatedMath.h",
+#
+#    "Memory/AddressOf.h",
+#    "Memory/AlignedMalloc.cpp",
+#    "Memory/AlignedMalloc.h",
     "Memory/Allocate.cpp",
     "Memory/Allocate.h",
-    "Memory/LinearAllocator.cpp",
-    "Memory/LinearAllocator.h",
-    "Memory/MallocPtr.h",
+#    "Memory/LinearAllocator.cpp",
+#    "Memory/LinearAllocator.h",
+#    "Memory/MallocPtr.h",
+    "Memory/Own.h",
     "Memory/OwnPtr.h",
     "Memory/RefCounted.h",
     "Memory/RefCountedThreadSafe.h",
-    "Memory/RefPtr.h",
+    "Memory/Rc.h",
+    "Memory/RcPtr.h",
     "Memory/WeakPtr.cpp",
     "Memory/WeakPtr.h",
 
-    "Posix/EintrWrapper.h",
-    "Posix/FileDescriptor.cpp",
-    "Posix/FileDescriptor.h",
+#    "Posix/EintrWrapper.h",
+#    "Posix/FileDescriptor.cpp",
+#    "Posix/FileDescriptor.h",
     "Posix/PosixErrorCode.cpp",
     "Posix/PosixErrorCode.h",
-    "Posix/StatWrapper.h",
+#    "Posix/StatWrapper.h",
+#
+#    "Process/CommandLine.cpp",
+#    "Process/CommandLine.h",
+#    "Process/NativeProcess.h",
+#    "Process/NativeProcessLinux.cpp",
+#    "Process/NativeProcessMac.cpp",
+#    "Process/NativeProcessPosix.cpp",
+#    "Process/NativeProcessWin.cpp",
+#
+#    "Simd/Vnx.h",
+#    "Simd/VnxNeon.h",
+#    "Simd/VnxSse.h",
 
-    "Process/CommandLine.cpp",
-    "Process/CommandLine.h",
-    "Process/NativeProcess.h",
-    "Process/NativeProcessLinux.cpp",
-    "Process/NativeProcessMac.cpp",
-    "Process/NativeProcessPosix.cpp",
-    "Process/NativeProcessWin.cpp",
-
-    "Simd/Vnx.h",
-    "Simd/VnxNeon.h",
-    "Simd/VnxSse.h",
-    
+    "String/String.cpp",
     "String/String.h",
     "String/StringSpan.cpp",
     "String/StringSpan.h",
 
-    "System/CpuInfo.cpp",
-    "System/CpuInfo.h",
-    "System/Environment.cpp",
-    "System/Environment.h",
-    "System/EnvironmentPosix.cpp",
-    "System/EnvironmentWin.cpp",
-    "System/Library.cpp",
-    "System/Library.h",
-    "System/LibraryPosix.cpp",
-    "System/LibraryWin.cpp",
+#    "System/CpuInfo.cpp",
+#    "System/CpuInfo.h",
+#    "System/Environment.cpp",
+#    "System/Environment.h",
+#    "System/EnvironmentPosix.cpp",
+#    "System/EnvironmentWin.cpp",
+#    "System/Library.cpp",
+#    "System/Library.h",
+#    "System/LibraryPosix.cpp",
+#    "System/LibraryWin.cpp",
 #    "System/SysInfo.cpp",
 #    "System/SysInfo.h",
 #    "System/SysInfoDarwin.mm",
@@ -305,53 +300,53 @@ component("Base") {
 #    "System/SysInfoLinux.cpp",
 #    "System/SysInfoPosix.cpp",
 #    "System/SysInfoWin.cpp",
-
+#
     "Text/AsciiChar.h",
-    "Text/AsciiString.cpp",
-    "Text/AsciiString.h",
-    "Text/FormatMany.cpp",
-    "Text/FormatMany.h",
-    "Text/FormatInteger.h",
-    "Text/ParsingUtil.h",
-    "Text/String16.cpp",
-    "Text/String16.h",
-    "Text/StringAlgo.cpp",
-    "Text/StringAlgo.h",
-    "Text/TextDecoder.h",
-    "Text/TextEncoder.h",
+#    "Text/AsciiString.cpp",
+#    "Text/AsciiString.h",
+#    "Text/FormatMany.cpp",
+#    "Text/FormatMany.h",
+#    "Text/FormatInteger.h",
+#    "Text/ParsingUtil.h",
+#    "Text/String16.cpp",
+#    "Text/String16.h",
+#    "Text/StringAlgo.cpp",
+#    "Text/StringAlgo.h",
+#    "Text/TextDecoder.h",
+#    "Text/TextEncoder.h",
     "Text/TextEncoding.cpp",
     "Text/TextEncoding.h",
-    #"Text/TextEncodingRegistry.cpp",
-    #"Text/TextEncodingRegistry.h",
+#    #"Text/TextEncodingRegistry.cpp",
+#    #"Text/TextEncodingRegistry.h",
     "Text/Utf.cpp",
     "Text/Utf.h",
-    "Text/Wtf.cpp",
-    "Text/Wtf.h",
-
-    "Text/Codec/AsciiEncoding.cpp",
-    "Text/Codec/AsciiEncoding.h",
-    #"Text/Codec/Cp1252Codec.cpp",
-    #"Text/Codec/Latin1Codec.cpp",
-    #"Text/Codec/Utf16Encoding.cpp",
-    #"Text/Codec/Utf16Encoding.h",
-    "Text/Codec/Utf32Encoding.cpp",
-    "Text/Codec/Utf32Encoding.h",
-    "Text/Codec/Utf8Encoding.cpp",
-    "Text/Codec/Utf8Encoding.h",
+#    "Text/Wtf.cpp",
+#    "Text/Wtf.h",
+#
+#    "Text/Codec/AsciiEncoding.cpp",
+#    "Text/Codec/AsciiEncoding.h",
+#    #"Text/Codec/Cp1252Codec.cpp",
+#    #"Text/Codec/Latin1Codec.cpp",
+#    #"Text/Codec/Utf16Encoding.cpp",
+#    #"Text/Codec/Utf16Encoding.h",
+#    "Text/Codec/Utf32Encoding.cpp",
+#    "Text/Codec/Utf32Encoding.h",
+#    "Text/Codec/Utf8Encoding.cpp",
+#    "Text/Codec/Utf8Encoding.h",
 
     "ThirdParty/nspr/prtime.cpp",
     "ThirdParty/nspr/prtime.h",
 
-    "Thread/AtomicFlag.h",
-    "Thread/AtomicOps.h",
-    "Thread/AtomicOpsInternalsAtomicWordCompat.h",
-    "Thread/AtomicOpsInternalsPortable.h",
-    "Thread/AtomicOpsInternalsX86Msvc.h",
-    "Thread/AtomicRefCount.h",
-    "Thread/AtomicSequenceNum.h",
-    "Thread/ConditionVariable.h",
-    "Thread/ConditionVariablePosix.cpp",
-    "Thread/ConditionVariableWin.cpp",
+#    "Thread/AtomicFlag.h",
+#    "Thread/AtomicOps.h",
+#    "Thread/AtomicOpsInternalsAtomicWordCompat.h",
+#    "Thread/AtomicOpsInternalsPortable.h",
+#    "Thread/AtomicOpsInternalsX86Msvc.h",
+#    "Thread/AtomicRefCount.h",
+#    "Thread/AtomicSequenceNum.h",
+#    "Thread/ConditionVariable.h",
+#    "Thread/ConditionVariablePosix.cpp",
+#    "Thread/ConditionVariableWin.cpp",
     "Thread/Lock.cpp",
     "Thread/Lock.h",
     "Thread/NativeLock.h",
@@ -359,40 +354,40 @@ component("Base") {
     "Thread/NativeThreadAndroid.cpp",
     "Thread/NativeThreadDarwin.mm",
     "Thread/NativeThreadLinux.cpp",
-    "Thread/NativeThreadLocal.cpp",
-    "Thread/NativeThreadLocal.h",
+#    "Thread/NativeThreadLocal.cpp",
+#    "Thread/NativeThreadLocal.h",
     "Thread/NativeThreadPosix.cpp",
     "Thread/NativeThreadWin.cpp",
-    "Thread/OneWriterSeqLock.cpp",
-    "Thread/OneWriterSeqLock.h",
-    "Thread/ReadWriteLock.h",
-    "Thread/SpinLock.cpp",
-    "Thread/SpinLock.h",
-    "Thread/Thread.cpp",
-    "Thread/Thread.h",
+#    "Thread/OneWriterSeqLock.cpp",
+#    "Thread/OneWriterSeqLock.h",
+#    "Thread/ReadWriteLock.h",
+#    "Thread/SpinLock.cpp",
+#    "Thread/SpinLock.h",
+#    "Thread/Thread.cpp",
+#    "Thread/Thread.h",
     "Thread/ThreadChecker.cpp",
     "Thread/ThreadChecker.h",
-    "Thread/ThreadExitWin.cpp",
-    "Thread/ThreadLocal.cpp",
-    "Thread/ThreadLocal.h",
-    "Thread/WaitableEvent.h",
-    "Thread/WaitableEventPosix.cpp",
-    "Thread/WaitableEventWin.cpp",
-
-    "Time/ElapsedTimer.h",
-    "Time/ThreadTicks.h",
+#    "Thread/ThreadExitWin.cpp",
+#    "Thread/ThreadLocal.cpp",
+#    "Thread/ThreadLocal.h",
+#    "Thread/WaitableEvent.h",
+#    "Thread/WaitableEventPosix.cpp",
+#    "Thread/WaitableEventWin.cpp",
+#
+#    "Time/ElapsedTimer.h",
+#    "Time/ThreadTicks.h",
     "Time/Time.cpp",
     "Time/Time.h",
     "Time/TimeBase.h",
     "Time/TimeDarwin.cpp",
     "Time/TimeDelta.cpp",
     "Time/TimeDelta.h",
-    "Time/TimeDeltaF.h",
-    "Time/TimeLiterals.h",
+#    "Time/TimeDeltaF.h",
+#    "Time/TimeLiterals.h",
     "Time/TimePosix.cpp",
-    "Time/TimeTicks.cpp",
-    "Time/TimeTicks.h",
-    "Time/TimeWin.cpp",
+#    "Time/TimeTicks.cpp",
+#    "Time/TimeTicks.h",
+#    "Time/TimeWin.cpp",
 
     "Type/Array.h",
     "Type/Attributes.h",
@@ -416,33 +411,33 @@ component("Base") {
     "Type/Variable.h",
 
     "Util/AutoReset.h",
-    "Util/Build.cpp",
-    "Util/Build.h",
-    "Util/CallOnce.cpp",
-    "Util/CallOnce.h",
-    "Util/Delegate.cpp",
-    "Util/Delegate.h",
-    "Util/Finally.h",
-    "Util/Flags.h",
-    "Util/Function.h",
+#    "Util/Build.cpp",
+#    "Util/Build.h",
+#    "Util/CallOnce.cpp",
+#    "Util/CallOnce.h",
+#    "Util/Delegate.cpp",
+#    "Util/Delegate.h",
+#    "Util/Finally.h",
+#    "Util/Flags.h",
+#    "Util/Function.h",
     "Util/LazyInstance.cpp",
     "Util/LazyInstance.h",
     "Util/ObserverList.h",
-    "Util/Random.cpp",
-    "Util/Random.h",
-    "Util/SwapBytes.h",
-    "Util/Tuple.h",
-    "Util/Version.cpp",
-    "Util/Version.h",
-
-    "Win/ScopedCoMem.h",
-    "Win/ScopedComInitializer.h",
-    "Win/ScopedComPtr.h",
-    "Win/ScopedHandle.cpp",
-    "Win/ScopedHandle.h",
-    "Win/WindowsHeader.h",
-    "Win/WinErrorCode.cpp",
-    "Win/WinErrorCode.h",
+#    "Util/Random.cpp",
+#    "Util/Random.h",
+#    "Util/SwapBytes.h",
+#    "Util/Tuple.h",
+#    "Util/Version.cpp",
+#    "Util/Version.h",
+#
+#    "Win/ScopedCoMem.h",
+#    "Win/ScopedComInitializer.h",
+#    "Win/ScopedComPtr.h",
+#    "Win/ScopedHandle.cpp",
+#    "Win/ScopedHandle.h",
+#    "Win/WindowsHeader.h",
+#    "Win/WinErrorCode.cpp",
+#    "Win/WinErrorCode.h",
   ]
 
   defines = [ "STP_BASE_IMPLEMENTATION" ]
