--- a/Stp/Base/Test/BUILD.gn
+++ b/Stp/Base/Test/BUILD.gn
@@ -52,8 +52,8 @@ static_library("GTest") {
     "GTestUtil.h",
     "Internal/GMockInternalUtils.cpp",
     "PlatformTest.h",
-    "ScopedLocale.cpp",
-    "ScopedLocale.h",
+#    "ScopedLocale.cpp",
+#    "ScopedLocale.h",
     "TestSuite.cpp",
     "TestSuite.h",
   ]
@@ -166,93 +166,93 @@ test("BasePerfTests") {
 
 test("BaseUnitTests") {
   sources = [
-    "../App/AtExitTest.cpp",
+#    "../App/AtExitTest.cpp",
     "../Containers/ArrayTest.cpp",
     "../Containers/BinarySearchTest.cpp",
-    "../Containers/BitArrayTest.cpp",
-    "../Containers/BufferTest.cpp",
-    "../Containers/FlatMapTest.cpp",
-    "../Containers/FlatSetTest.cpp",
-    "../Containers/HashMapTest.cpp",
+#    "../Containers/BitArrayTest.cpp",
+#    "../Containers/BufferTest.cpp",
+#    "../Containers/FlatMapTest.cpp",
+#    "../Containers/FlatSetTest.cpp",
+#    "../Containers/HashMapTest.cpp",
     # TODO "Containers/LinkedListTest.cpp",
-    "../Containers/ListTest.cpp",
+#    "../Containers/ListTest.cpp",
     # TODO "Containers/LruCacheTest.cpp",
     # TODO "Containers/SinglyLinkedListTest.cpp",
-    "../Containers/SortingTest.cpp",
+#    "../Containers/SortingTest.cpp",
     # FIXME "../Containers/SpanTest.cpp",
     # TODO "Containers/StackTest.cpp",
-    "../Crypto/Crc32Test.cpp",
-    "../Crypto/Md5Test.cpp",
-    "../Crypto/CryptoRandomTest.cpp",
-    "../Crypto/Sha1Test.cpp",
+#    "../Crypto/Crc32Test.cpp",
+#    "../Crypto/Md5Test.cpp",
+#    "../Crypto/CryptoRandomTest.cpp",
+#    "../Crypto/Sha1Test.cpp",
 #    "../FileSystem/DirectoryTest.cpp",
 #    "../FileSystem/FilePathTest.cpp",
     # FIXME "FileSystem/FileTest.cpp",
     # FIXME "FileSystem/MemoryMappedFileTest.cpp",
     # FIXME "FileSystem/TemporaryDirectoryTest.cpp",
-    "../Io/Base64Test.cpp",
+#    "../Io/Base64Test.cpp",
 
     # FIXME "Linux/ProcMapsTest.cpp",
 
     "../Math/AlignmentTest.cpp",
-    "../Math/BitsTest.cpp",
-    "../Math/CommonFactorTest.cpp",
+#    "../Math/BitsTest.cpp",
+#    "../Math/CommonFactorTest.cpp",
 #    "../Math/FixedTest.cpp",
     "../Math/FloatToIntegerTest.cpp",
-    "../Math/HalfTest.cpp",
-    "../Math/NBitsTest.cpp",
-    "../Math/PowerOfTwoTest.cpp",
-    "../Math/RawFloatTest.cpp",
-    "../Math/SafeConversionsTest.cpp",
+#    "../Math/HalfTest.cpp",
+#    "../Math/NBitsTest.cpp",
+#    "../Math/PowerOfTwoTest.cpp",
+#    "../Math/RawFloatTest.cpp",
+#    "../Math/SafeConversionsTest.cpp",
 #    "../Math/SafeTest.cpp",
     "../Math/SaturatedMathTest.cpp",
-    "../Memory/AlignedMallocTest.cpp",
-    "../Memory/LinearAllocatorTest.cpp",
-    "../Memory/OwnPtrTest.cpp",
-    "../Memory/RefCountedTest.cpp",
+#    "../Memory/AlignedMallocTest.cpp",
+#    "../Memory/LinearAllocatorTest.cpp",
+#    "../Memory/OwnPtrTest.cpp",
+#    "../Memory/RefCountedTest.cpp",
     # FIXME "Memory/WeakPtrTest.cpp",
-    "../Simd/VnxTest.cpp",
-    "../System/CpuInfoTest.cpp",
-    "../System/EnvironmentTest.cpp",
-    "../System/LibraryTest.cpp",
+#    "../Simd/VnxTest.cpp",
+#    "../System/CpuInfoTest.cpp",
+#    "../System/EnvironmentTest.cpp",
+#    "../System/LibraryTest.cpp",
 #    "../System/SysInfoTest.cpp",
     "../Text/AsciiCharTest.cpp",
     "../Text/FormatIntegerTest.cpp",
-    "../Text/StringSpanTest.cpp",
+#    "../Text/StringSpanTest.cpp",
 #    "../Text/StringTest.cpp",
     # FIXME "Text/UtfStringConversionsTest.cpp",
-    "../Thread/AtomicOpsTest.cpp",
-    "../Thread/ConditionVariableTest.cpp",
-    "../Thread/LockTest.cpp",
-    "../Thread/OneWriterSeqLockTest.cpp",
-    "../Thread/ReadWriteLockTest.cpp",
-    "../Thread/WaitableEventTest.cpp",
-    "../Time/PrTimeTest.cpp",
-    "../Time/ThreadTicksTest.cpp",
-    "../Time/TimeDeltaTest.cpp",
-    "../Time/TimeTicksTest.cpp",
-    "../Time/TimeTest.cpp",
-    "../Type/BasicTest.cpp",
-    "../Type/HashableTest.cpp",
-    "../Type/NullableTest.cpp",
-    "../Type/ObjectCastTest.cpp",
-    "../Type/ParseFloatTest.cpp",
-    "../Type/ParseIntegerTest.cpp",
-    "../Type/SignTest.cpp",
-    "../Type/VariableTest.cpp",
-
-    "../Util/AutoResetTest.cpp",
-    "../Util/DelegateTest.cpp",
-    "../Util/FinallyTest.cpp",
-    "../Util/FlagsTest.cpp",
-    "../Util/FunctionTest.cpp",
-    "../Util/LazyInstanceTest.cpp",
-    "../Util/ObserverListTest.cpp",
-    "../Util/RandomTest.cpp",
-    "../Util/RandomUtilTest.cpp",
-    "../Util/SwapBytesTest.cpp",
-    "../Util/TupleTest.cpp",
-    "../Util/VersionTest.cpp",
+#    "../Thread/AtomicOpsTest.cpp",
+#    "../Thread/ConditionVariableTest.cpp",
+#    "../Thread/LockTest.cpp",
+#    "../Thread/OneWriterSeqLockTest.cpp",
+#    "../Thread/ReadWriteLockTest.cpp",
+#    "../Thread/WaitableEventTest.cpp",
+#    "../Time/PrTimeTest.cpp",
+#    "../Time/ThreadTicksTest.cpp",
+#    "../Time/TimeDeltaTest.cpp",
+#    "../Time/TimeTicksTest.cpp",
+#    "../Time/TimeTest.cpp",
+#    "../Type/BasicTest.cpp",
+#    "../Type/HashableTest.cpp",
+#    "../Type/NullableTest.cpp",
+#    "../Type/ObjectCastTest.cpp",
+#    "../Type/ParseFloatTest.cpp",
+#    "../Type/ParseIntegerTest.cpp",
+#    "../Type/SignTest.cpp",
+#    "../Type/VariableTest.cpp",
+#
+#    "../Util/AutoResetTest.cpp",
+#    "../Util/DelegateTest.cpp",
+#    "../Util/FinallyTest.cpp",
+#    "../Util/FlagsTest.cpp",
+#    "../Util/FunctionTest.cpp",
+#    "../Util/LazyInstanceTest.cpp",
+#    "../Util/ObserverListTest.cpp",
+#    "../Util/RandomTest.cpp",
+#    "../Util/RandomUtilTest.cpp",
+#    "../Util/SwapBytesTest.cpp",
+#    "../Util/TupleTest.cpp",
+#    "../Util/VersionTest.cpp",
   ]
 
   defines = []
